v1.1.0/modules/schema/pages/enumeration/PhaseCode.adoc
= `PhaseCode`
:toclevels: 4


+++An unordered enumeration of phase identifiers.  Allows designation of phases for both transmission and distribution equipment, circuits and loads.   The enumeration, by itself, does not describe how the phases are connected together or connected to ground.  Ground is not explicitly denoted as a phase.
Residential and small commercial loads are often served from single-phase, or split-phase, secondary circuits. For the example of s12N, phases 1 and 2 refer to hot wires that are 180 degrees out of phase, while N refers to the neutral wire. Through single-phase transformer connections, these secondary circuits may be served from one or two of the primary phases A, B, and C. For three-phase loads, use the A, B, C phase codes instead of s12N.
The integer values are from IEC 61968-9 to support revenue metering applications.+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:PhaseCode`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `A`
| `cim:PhaseCode.A`
| n/a

| `AB`
| `cim:PhaseCode.AB`
| n/a

| `ABC`
| `cim:PhaseCode.ABC`
| n/a

| `ABCN`
| `cim:PhaseCode.ABCN`
| n/a

| `ABN`
| `cim:PhaseCode.ABN`
| n/a

| `AC`
| `cim:PhaseCode.AC`
| n/a

| `ACN`
| `cim:PhaseCode.ACN`
| n/a

| `AN`
| `cim:PhaseCode.AN`
| n/a

| `B`
| `cim:PhaseCode.B`
| n/a

| `BC`
| `cim:PhaseCode.BC`
| n/a

| `BCN`
| `cim:PhaseCode.BCN`
| n/a

| `BN`
| `cim:PhaseCode.BN`
| n/a

| `C`
| `cim:PhaseCode.C`
| n/a

| `CN`
| `cim:PhaseCode.CN`
| n/a

| `N`
| `cim:PhaseCode.N`
| n/a

| `none`
| `cim:PhaseCode.none`
| n/a

| `s1`
| `cim:PhaseCode.s1`
| n/a

| `s12`
| `cim:PhaseCode.s12`
| n/a

| `s12N`
| `cim:PhaseCode.s12N`
| n/a

| `s1N`
| `cim:PhaseCode.s1N`
| n/a

| `s2`
| `cim:PhaseCode.s2`
| n/a

| `s2N`
| `cim:PhaseCode.s2N`
| n/a

| `X`
| `cim:PhaseCode.X`
| n/a

| `XN`
| `cim:PhaseCode.XN`
| n/a

| `XY`
| `cim:PhaseCode.XY`
| n/a

| `XYN`
| `cim:PhaseCode.XYN`
| n/a
|===

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CompositeSwitchInfo.adoc[`CompositeSwitchInfo`] | xref::class/CompositeSwitchInfo.adoc#phaseCode[`phaseCode`]



| xref::class/DiagnosisDataSet.adoc[`DiagnosisDataSet`] | xref::class/DiagnosisDataSet.adoc#phaseCode[`phaseCode`]



| xref::class/Fault.adoc[`Fault`] | xref::class/Fault.adoc#phases[`phases`]



| xref::class/Measurement.adoc[`Measurement`] | xref::class/Measurement.adoc#phases[`phases`]



| xref::class/ReadingType.adoc[`ReadingType`] | xref::class/ReadingType.adoc#phases[`phases`]



| xref::class/RegulatingControl.adoc[`RegulatingControl`] | xref::class/RegulatingControl.adoc#monitoredPhase[`monitoredPhase`]



| xref::class/ShuntCompensatorControl.adoc[`ShuntCompensatorControl`] | xref::class/ShuntCompensatorControl.adoc#sensingPhaseCode[`sensingPhaseCode`]



| xref::class/SwitchingAction.adoc[`SwitchingAction`] | xref::class/SwitchingAction.adoc#phases[`phases`]



| xref::class/Terminal.adoc[`Terminal`] | xref::class/Terminal.adoc#phases[`phases`]



| xref::class/TransformerTankEnd.adoc[`TransformerTankEnd`] | xref::class/TransformerTankEnd.adoc#phases[`phases`]



| xref::class/UsagePoint.adoc[`UsagePoint`] | xref::class/UsagePoint.adoc#phaseCode[`phaseCode`]


|===

